test: add test for file service search service removeorrename service and directory service and refactor code